<resources>
    <string name="app_name">MyFilmDatabaseApp</string>
    <string name="panel">ПАНЕЛЬ</string>
    <string name="catalogMovies">ФИЛЬМЫ</string>
    <string name="catalogActionMovies">БОЕВИКИ</string>
    <string name="catalogCategories">КАТЕГОРИИ</string>


    <string name="addCategory">ДОБАВИТЬ КАТЕГОРИЮ</string>
    <string name="addMovie">ДОБАВИТЬ ФИЛЬМ</string>

    <string name="editCategory">РЕДАКТИРОВАНИЕ КАТЕГОРИИ</string>
    <string name="editMovie">РЕДАКТИРОВАНИЕ ФИЛЬМА</string>


    <string name="labelEnterCategory">Введите название категории</string>
    <string name="labelEnterNameMovie">Введите название фильма</string>
    <string name="labelEnterDurationMovie">Введите продолжительность фильма</string>

    <string name="deleteAllCategories">УДАЛИТЬ ВСЕ КАТЕГОРИИ</string>
    <string name="deleteAllMovies">УДАЛИТЬ ВСЕ ФИЛЬМЫ</string>

    <string name="action">ЭКШН</string>
    <string name="animation">МУЛЬТФИЛЬМЫ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>