<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/panelItemBottomNav"
        android:icon="@drawable/edit_white"
        android:title="@string/panel"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/catalogCategoriesItemBottomNav"
        android:icon="@drawable/catalog_categories"
        android:title="@string/catalogCategories"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/catalogMoviesItemBottomNav"
        android:icon="@drawable/catalog_movies"
        android:title="@string/catalogMovies"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/catalogActionItemBottomNav"
        android:icon="@drawable/catalog_action_movie"
        android:title="@string/catalogActionMovies"
        app:showAsAction="ifRoom"/>

</menu>