<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".panels.PanelEditMovie">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:padding="10dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerEditMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="60dp"
                android:textColor="@color/black"
                android:text="@string/editMovie"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditNameMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/headerEditMovie"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterNameMovie"
                app:hintTextColor="@android:color/white"
                app:startIconDrawable="@drawable/catalog_categories"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNameMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/cursor" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditCategoryMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEditNameMovie"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterCategory"
                app:hintTextColor="@android:color/white"
                app:startIconDrawable="@drawable/catalog_movies"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCategoryMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/cursor"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sectionEditDurationMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEditCategoryMovie"
                android:layout_margin="10dp"
                app:boxBackgroundColor="@android:color/transparent"
                app:boxStrokeColor="@android:color/white"
                app:startIconTint="@android:color/white"
                app:endIconTint="@android:color/holo_red_light"
                android:hint="@string/labelEnterDurationMovie"
                app:hintTextColor="@android:color/white"
                app:startIconDrawable="@drawable/price"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editDurationMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@android:color/white"
                    android:textCursorDrawable="@drawable/cursor"/>

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/sectionResEditMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionEditDurationMovie"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEditNameMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resEditCategoryMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/res_edit_duration_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEditMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sectionResEditMovie"
                android:layout_marginTop="20dp"
                android:text="@string/editMovie"
                android:background="@color/black"
                android:textColor="@color/orange"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>
